//
// Created by whitby on 2025-02-03.
//

#ifndef MY_CARTOGRAPHER_COMMON_THREAD_POOL_H_
#define MY_CARTOGRAPHER_COMMON_THREAD_POOL_H_

#include "my_cartographer/common/task.h"

#include <deque>
#include <functional>
#include <memory>
#include <thread>
#include <vector>

#include <absl/container/flat_hash_map.h>
#include <absl/synchronization/mutex.h>

namespace my_cartographer
{
  namespace common
  {

    class Task;

    class ThreadPoolInterface
    {
    public:
      ThreadPoolInterface() {}
      virtual ~ThreadPoolInterface() {}

      /**
       * @brief 将 task 放入线程池等待队列中，且将 task 关联线程池
       * @return task 弱智能指针，若对应任务已完成，则会提前释放，可通过 nullptr 来进行判断
       */
      virtual std::weak_ptr<Task> Schedule(std::unique_ptr<Task> task) = 0;

    protected:
      /**
       * @brief 运行 task 任务
       */
      void Execute(Task *task);

      /**
       * @brief 将 task 关联该线程池，若 task 状态切换为 DEPENDENCIES_COMPLETED，主动放入线程池任务队列
       */
      void SetThreadPool(Task *task);

    private:
      friend class Task;

      /**
       * @brief 将 task 从等待队列中移入执行队列中
       * @note task 依赖任务完成后，主动调用
       */
      virtual void NotifyDependenciesCompleted(Task *task) = 0;
    };

    // A fixed number of threads working on tasks. Adding a task does not block.
    // Tasks may be added whether or not their dependencies are completed.
    // When all dependencies of a task are completed, it is queued up for execution
    // in a background thread. The queue must be empty before calling the
    // destructor. The thread pool will then wait for the currently executing work
    // items to finish and then destroy the threads.
    class ThreadPool : public ThreadPoolInterface
    {
    public:
      explicit ThreadPool(int num_threads);
      ~ThreadPool();

      ThreadPool(const ThreadPool &) = delete;
      ThreadPool &operator=(const ThreadPool &) = delete;

      std::weak_ptr<Task> Schedule(std::unique_ptr<Task> task)
          LOCKS_EXCLUDED(mutex_) override;

    private:
      void DoWork();

      void NotifyDependenciesCompleted(Task *task) LOCKS_EXCLUDED(mutex_) override;

      absl::Mutex mutex_;
      bool running_ GUARDED_BY(mutex_) = true;  // 线程开启标记
      std::vector<std::thread> pool_ GUARDED_BY(mutex_);  // 线程数组
      std::deque<std::shared_ptr<Task>> task_queue_ GUARDED_BY(mutex_); // 执行队列
      absl::flat_hash_map<Task *, std::shared_ptr<Task>> tasks_not_ready_
          GUARDED_BY(mutex_); // 等待队列
    };

  } // namespace common
} // namespace my_cartographer

#endif // MY_CARTOGRAPHER_COMMON_THREAD_POOL_H_